--- a/css/style.css
+++ b/css/style.css
@@ -144,8 +144,11 @@ body {
 .description {
   font-size: 14px;
   font-weight: 400;
-  line-height: 24px;
+  /* line-height: 24px; */
   margin-top: 24px;
+  color: #595959;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
 }
 
 .info-container {
