--- a/css/style.css
+++ b/css/style.css
@@ -136,13 +136,14 @@ body {
 }
 
 .name {
-  font-size: 45px;
+  font-size: 55px;
+  font-family: Snell Roundhand;
   font-weight: 700;
   line-height: 89px;
 }
 
 .description {
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 400;
   /* line-height: 24px; */
   margin-top: 24px;
@@ -234,4 +235,12 @@ body {
 }
 img {
   width: 100%;
+}
+
+#copyright {
+  margin-top: 200px;
+  font-size: 14px;
+  color: rgba(26, 32, 94, 0.589);
+  width: 100%;
+  text-align: center;
 }
